# parkhaus

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
docs/: architecture.md  configuration.md  modules.md  output-format.md  project-reflection.md  requirements.md  testing.md  user-manual.md
docs/flowcharts/: check_exit_flowchart.xml  ui.drawio  user interface.drawio
include/: config.h  parking.h  queue.h  simulation.h  stats.h  ui.h  utils.h  vehicle.h
src/: config.c  main.c  parking.c  queue.c  simulation.c  stats.c  ui.c  utils.c  vehicle.c
test/: test_config_create_config.c  test_config_free_config.c  test_config_get_config.c  test_config_populate_with_defaults.c  test_config_save_config.c  test_parking_check_exits.c  test_parking_entry_parking.c  test_parking_free_parking.c  test_parking_get_free_spots.c  test_parking_init_occ.c  test_parking_init_parking.c  test_queue_delete_queue.c  test_queue_dequeue.c  test_queue_enqueue.c  test_queue_free_queue.c  test_queue_increment_queuetime.c  test_queue_init_queue.c  test_simulation_rand_arrival.c  test_simulation_run_simulation.c  test_stats_close_output_file.c  test_stats_create_output_file.c  test_stats_free_stats.c  test_stats_init_stats.c  test_stats_reset_all_stats.c  test_stats_reset_temp_stats.c  test_stats_save_final_dataset.c  test_stats_save_temp_dataset.c  test_stats_update_peak.c  test_stats_update_stats.c  test_vehicle_create_vehicle.c  test_vehicle_free_vehicle.c
